<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Clase 2 Android</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tlt_btn_1">Ingresar Persona</string>
    <string name="tlt_btn_2">Consultar Registros</string>
    <string name="title_activity_ingresar_persona">IngresarPersona</string>
    <string name="lbl_nombre">Nombre</string>
    <string name="txtGenero">Genero</string>
    <string name="txt_fecha_nacimiento">Fecha Nacimiento</string>

    <string-array name="generos">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>

    <string name="txt_direccion">Dirección</string>
    <string name="btn_guardar">Guardar</string>
    <string name="title_activity_ver_resultados">VerResultados</string>
    <string name="title_activity_detalle_peesona">DetallePeesona</string>

</resources>
